# hh-lambda-draft

./: CMakeLists.txt
src/: draft.hpp  main.cpp  utils.hpp
src/hh/: internal_lambda_task.h  lambda_core_task.h  lambda_task.h  lambda_tools.h  task_interface.h
